# 2d-game-engine

./: CMakeLists.txt  LICENSE
include/: AComponent.h  AGizmo.h  AModule.h  CAnimationState.h  CApplication.h  CCamera.h  CComponentAnimation.h  CComponentBoxCollider.h  CComponentRenderer.h  CComponentTransform.h  CGameObject.h  CGizmo.h  CModuleCamera.h  CModuleEditor.h  CModuleInput.h  CModuleRenderer.h  CModuleWindow.h  CRotationGizmo.h  CScaleGizmo.h  CSerializator.h  CTexture.h  CTextureRenderer.h  CTranslationGizmo.h  Globals.h
include/Components/: CComponentAnimation.h  CComponentBoxCollider.h  CComponentRenderer.h  CComponentTransform.h
include/Modules/: CModuleCamera.h  CModuleEditor.h  CModuleRenderer.h  CModuleResourceManager.h  CModuleSceneManager.h  CModuleTime.h  CModuleWindow.h
lib/ImGui/include/: imgui_internal.h
lib/ImGui/src/: CMakeLists.txt  imgui_widgets.cpp
lib/stb/: CMakeLists.txt
resources/scenes/: scene.json
resources/shaders/: BackFragmentShader.txt  BackVertexShader.txt  FragmentShader.txt  GridFragmentShader.txt  GridVertexShader.txt
src/: AComponent.cpp  AGizmo.cpp  CAnimationState.cpp  CApplication.cpp  CCamera.cpp  CComponentAnimation.cpp  CComponentBoxCollider.cpp  CComponentRenderer.cpp  CComponentTransform.cpp  CGameObject.cpp  CGizmo.cpp  CModuleCamera.cpp  CModuleEditor.cpp  CModuleInput.cpp  CModuleRenderer.cpp  CModuleWindow.cpp  CRotationGizmo.cpp  CScaleGizmo.cpp  CSerializator.cpp  CTexture.cpp  CTextureRenderer.cpp  CTranslationGizmo.cpp  main.cpp
src/Components/: CComponentAnimation.cpp  CComponentBoxCollider.cpp  CComponentRenderer.cpp  CComponentTransform.cpp
src/Modules/: CModuleCamera.cpp  CModuleEditor.cpp  CModuleInput.cpp  CModuleRenderer.cpp  CModuleResourceManager.cpp  CModuleSceneManager.cpp  CModuleTime.cpp  CModuleWindow.cpp
